[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ytultimate"
version = "1.0.2"
description = "A Linux-first power CLI for authorized YouTube/video downloads with smart quality control."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Avins" }
]
dependencies = [
  "yt-dlp>=2024.8.6",
  "typer>=0.12.3",
  "rich>=13.7.1",
  "platformdirs>=4.2.2"
]

[project.scripts]
ytdown = "ytu.cli:app"
yt-down = "ytu.cli:app"
ytultimate = "ytu.cli:app"
ytu = "ytu.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["ytu"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
